# Casino_plus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README.rst  casino_plus.cc  rand_not_Pooia_algorithm.c++  setup.py  source.Amohammadi2.cxx  source.Amohammadi2.cxx.C
.github/workflows/: cmake.yml
Casino_plus/: CMakeLists.txt  Casino_plus.cpp  Casino_plus.h  Casino_plus_py.cpp
Casino_plus/include/: Casino_plus.h
Dependencies/: CMakeLists.txt
PyBinding/: CMakeLists.txt  CasinoPlus.cpp  CmakeLists.txt  setup.py
Tests/: AlgoTest.cpp  CMakeLists.txt
