# CMakeList.txt : CMake project for Casino_plus, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Casino_plus "Casino_plus.cpp" "Casino_plus.h")

# TODO: Add tests and install targets if needed.
